--- a/nobu001/templates/nobu001/index.html
+++ b/nobu001/templates/nobu001/index.html
@@ -9,7 +9,16 @@
     <body class="container">
         <h1 class="display-4 text-primary">{{title}}</h1>
        <table class="table">
-       {{data|safe}}
+           <tr>
+               <th>data</th><th></th><th></th>
+           </tr>
+        {% for item in data %}
+           <tr>
+               <td>{{item}}</td>
+               <td><a href="{% url 'edit' item.id %}">Edit</a></td>
+               <td><a href="{% url 'delete' item.id %}">Delete</a></td>
+           </tr>
+       {% endfor %}
        </table>
     </body>
 </html>
