--- a/nobu001/templates/nobu001/find.html
+++ b/nobu001/templates/nobu001/find.html
@@ -13,7 +13,7 @@
            {% csrf_token %}
             {{ form.as_p }}
             <tr><th></th><td>
-                <input type="submit" value="click" class="btn btn-primary mt-2">
+                <input type="submit" value="click" class="btn btn-primary mt-2"></td></tr>
             </form>
             <hr>
             <table class="table">
@@ -21,12 +21,15 @@
                     <th>id</th>
                     <th>name</th>
                     <th>mail</th>
+                    <th>birthday</th>
                 </tr>
             {% for item in data %}
                 <tr>
-                    <th>{{item.id}}</th>
-                    <td>{{item.name}}({{item.age}})</td>
+                    <td>{{item.id}}</td>
+                    <td>{{item.name}}</td>
+                    <td>{{item.age}}</td>
                     <td>{{item.mail}}</td>
+                    <td>{{item.birthday}}</td>
                 </tr>
             {% endfor %}
             </table>   
