--- a/nobu001/templates/nobu001/index.html
+++ b/nobu001/templates/nobu001/index.html
@@ -16,6 +16,7 @@
                <th>age</th>
                <th>mail</th>
                <th>birthday</th>
+               <th>Messages</th>
            </tr>
         {% for item in data %}
            <tr>
@@ -24,9 +25,49 @@
                <td>{{item.age}}</td>
                <td>{{item.mail}}</td>
                <td>{{item.birthday}}</td>
+               <td><ul>
+                   {% for ob in item.message_set.all %}
+                   <li>{{ob.title}}</li>
+                   {% endfor %}
+               </ul></td>
            </tr>
         {% endfor %}
        </table>
+       <ul class="pagination justlfy-content-center">
+            {% if data.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="{% url 'index' %}">&laquo; first</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="{% url 'index' %}{{data.previous_page_number}}">&laquo; prev</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link">&laquo; first</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link">&laquo; prev</a>
+            </li>
+            {% endif %}
+            <li class="page-item">
+                <a class="page-link">{{data.number}}/{{data.paginator.num_pages}}</a>
+            </li>
+            {% if data.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="{% url 'index' %}{{data.next_page_number}}">next &raquo;</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="{% url 'index' %}{{data.paginator.num_pages}}">last &raquo;</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link">next &raquo;</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link">last &raquo;</a>
+            </li>
+            {% endif %}
+       </ul>
 
     </body>
 </html>
